crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_expr_not_in_list.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE NOT n.status IN ['deleted', 'banned'] RETURN n\")"
---
MATCH (n)
WHERE NOT n.status IN ['deleted', 'banned']
RETURN n
