crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_expr_string_concat.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person) RETURN n.firstName + ' ' + n.lastName AS fullName\")"
---
MATCH (n:Person)
RETURN n.firstName + ' ' + n.lastName AS fullName
