crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_match_where_with_match_return.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person) WHERE n.active = true WITH n MATCH (n)-[r:KNOWS]->(m) RETURN n, m\")"
---
MATCH (n:Person)
WHERE n.active = TRUE
WITH n
MATCH (n)-[r:KNOWS]->(m)
RETURN n, m
