crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_match_where_with_return.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person) WHERE n.age > 30 WITH n ORDER BY n.name RETURN n.name, n.age\")"
---
MATCH (n:Person)
WHERE n.age > 30
WITH n
ORDER BY n.name
RETURN n.name, n.age
