crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_match_with_where_return.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WITH n WHERE n.active = true RETURN n\")"
---
MATCH (n)
WITH n
WHERE n.active = TRUE
RETURN n
