crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_merge_node.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MERGE (n:Person {name: 'Alice'})\")"
---
MERGE (n:Person {name: 'Alice'})
