crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_optional_match.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person) OPTIONAL MATCH (n)-[r:KNOWS]->(m) RETURN n, m\")"
---
MATCH (n:Person)
OPTIONAL
MATCH (n)-[r:KNOWS]->(m)
RETURN n, m
