crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_order_by_multi_desc.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person) RETURN n.name, n.age ORDER BY n.age DESC, n.name ASC\")"
---
MATCH (n:Person)
RETURN n.name, n.age
ORDER BY n.age DESC, n.name ASC
