crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_remove_property.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person {name: 'Alice'}) REMOVE n.age RETURN n\")"
---
MATCH (n:Person {name: 'Alice'})
REMOVE n.age
RETURN n
